--- a/Week 6/IDS_6_1_IN_CLASS-1.ipynb
+++ b/Week 6/IDS_6_1_IN_CLASS-1.ipynb
@@ -92,7 +92,11 @@
         "\n",
         "# Melt the DataFrame: convert subject columns ('Math', 'Science') into a single 'Subject' column,\n",
         "# with their corresponding scores in a new 'Score' column.\n",
-        "df_melted = pd.melt(df_students, id_vars=['Student'], value_vars=['Math', 'Science'], var_name='Subject', value_name='Score')"
+        "df_melted = pd.melt(df_students,\n",
+        "                    id_vars=['Student'], \n",
+        "                    value_vars=['Math', 'Science'], \n",
+        "                    var_name='Subject', \n",
+        "                    value_name='Score')"
       ]
     },
     {
@@ -137,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "hrQJbavIlpJK"
       },
@@ -251,7 +255,7 @@
               "8     Doe     3  126"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -274,7 +278,12 @@
         "# into two columns: 'Visit' and 'Blood_Pressure'\n",
         "\n",
         "# Clean the 'Visit' column to make it more readable (e.g., remove \"BP_\" prefix)\n",
-        "df_melted_bp = pd.melt(df_bp, id_vars=['Patient'], value_vars=['BP_Visit1', 'BP_Visit2', 'BP_Visit3'], var_name='Visit', value_name='BP')\n",
+        "df_melted_bp = pd.melt(df_bp, \n",
+        "                       id_vars=['Patient'], \n",
+        "                       value_vars=['BP_Visit1', 'BP_Visit2', 'BP_Visit3'], \n",
+        "                       var_name='Visit', \n",
+        "                       value_name='BP')\n",
+        "\n",
         "df_melted_bp['Visit'] = df_melted_bp['Visit'].str.replace('BP_Visit', \"\")\n",
         "df_melted_bp"
       ]
@@ -340,11 +349,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "uElV_YFweXc1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Original (Tidy) Weather DataFrame:\n",
+            "         date         City  Temperature\n",
+            "0  2021-01-01     New York           55\n",
+            "1  2021-01-01  Los Angeles           75\n",
+            "2  2021-01-02     New York           57\n",
+            "3  2021-01-02  Los Angeles           77\n",
+            "\n",
+            "Pivoted (Wide/Untidy) Weather DataFrame:\n",
+            "City        Los Angeles  New York\n",
+            "date                             \n",
+            "2021-01-01           75        55\n",
+            "2021-01-02           77        57\n"
+          ]
+        }
+      ],
       "source": [
         "# Create a long-format DataFrame (tidy form)\n",
         "data_weather = {\n",
@@ -358,9 +387,12 @@
         "print(df_weather_long)\n",
         "\n",
         "# Pivot the DataFrame: use 'date' as the index and make each city a separate column.\n",
-        "df_weather_long.pivot(index = 'date'\n",
-        "                      columns = 'City'\n",
-        "                      Vales  = '')"
+        "df_weather_pivot = df_weather_long.pivot(index='date',\n",
+        "                                        columns='City',\n",
+        "                                        values='Temperature')\n",
+        "\n",
+        "print(\"\\nPivoted (Wide/Untidy) Weather DataFrame:\")\n",
+        "print(df_weather_pivot)"
       ]
     },
     {
@@ -418,11 +450,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "pnAN4WtvhPp5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Original Employee Salary DataFrame:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>Sex</th>\n",
+              "      <th>Female</th>\n",
+              "      <th>Male</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Department</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Marketing</th>\n",
+              "      <td>54500.0</td>\n",
+              "      <td>56000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Sales</th>\n",
+              "      <td>52000.0</td>\n",
+              "      <td>50500.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Sex          Female     Male\n",
+              "Department                  \n",
+              "Marketing   54500.0  56000.0\n",
+              "Sales       52000.0  50500.0"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a sample tidy DataFrame for employee salaries\n",
         "df_salaries = pd.DataFrame({\n",
@@ -432,10 +529,20 @@
         "})\n",
         "\n",
         "print(\"\\nOriginal Employee Salary DataFrame:\")\n",
-        "print(df_salaries)\n",
+        "df_salaries\n",
         "\n",
         "# Create a pivot table: aggregate 'Salary' using the mean,\n",
-        "# with 'Department' as the index and 'Gender' as the columns.\n"
+        "# with 'Department' as the index and 'Gender' as the columns.\n",
+        "df_salaries = pd.pivot_table(df_salaries,\n",
+        "               index = 'Department',\n",
+        "               columns = 'Sex',\n",
+        "               values = 'Salary',\n",
+        "               aggfunc = 'mean')\n",
+        "\n",
+        "df_salaries\n",
+        "\n",
+        "\n",
+        "# bc there are duplicate entries in index"
       ]
     },
     {
@@ -491,11 +598,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "j5Ll60FviFXp"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'pd' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create a DataFrame with quarterly sales data for cities (wide format)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df_sales \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCity\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNew York\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mChicago\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLos Angeles\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQ1_Sales\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m25000\u001b[39m, \u001b[38;5;241m18000\u001b[39m, \u001b[38;5;241m22000\u001b[39m],\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQ2_Sales\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m27000\u001b[39m, \u001b[38;5;241m19000\u001b[39m, \u001b[38;5;241m23000\u001b[39m]\n\u001b[0;32m      6\u001b[0m })\u001b[38;5;241m.\u001b[39mset_index(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCity\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mOriginal Sales DataFrame (Wide Format):\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(df_sales)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Create a DataFrame with quarterly sales data for cities (wide format)\n",
         "df_sales = pd.DataFrame({\n",
