--- a/Notes/Week 7_Steadman_IDS_Week_7_Homework_Completed.ipynb
+++ b/Notes/Week 7_Steadman_IDS_Week_7_Homework_Completed.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_california_housing\n",
     "import pandas as pd\n",
+    "\n",
     "# Load the housing dataset\n",
     "housing = fetch_california_housing()"
    ]
@@ -18,7 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating data frame\n",
     "X = pd.DataFrame(housing.data, columns=housing.feature_names) \n",
+    "\n",
+    "# Target: median housing prices\n",
     "y = pd.Series(housing.target, name='med_house_value')"
    ]
   },
@@ -31,7 +35,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First 5 rows of the feature dataset:\n",
       "   MedInc  HouseAge  AveRooms  AveBedrms  Population  AveOccup  Latitude  \\\n",
       "0  8.3252      41.0  6.984127   1.023810       322.0  2.555556     37.88   \n",
       "1  8.3014      21.0  6.238137   0.971880      2401.0  2.109842     37.86   \n",
@@ -46,37 +49,122 @@
       "3    -122.25  \n",
       "4    -122.25  \n",
       "\n",
-      "Feature names:\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'cols'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_36836\\2175020037.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Print the feature names\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\nFeature names:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# Check for missing values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\nMissing values in the dataset:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\WilliamSteadman\\anaconda3\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6295\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6296\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6297\u001b[0m         \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6298\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6299\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'cols'"
+      "Feature names:\n",
+      "0    4.526\n",
+      "1    3.585\n",
+      "2    3.521\n",
+      "3    3.413\n",
+      "4    3.422\n",
+      "Name: med_house_value, dtype: float64\n",
+      "\n",
+      "Missing values in the dataset:\n",
+      "MedInc        0\n",
+      "HouseAge      0\n",
+      "AveRooms      0\n",
+      "AveBedrms     0\n",
+      "Population    0\n",
+      "AveOccup      0\n",
+      "Latitude      0\n",
+      "Longitude     0\n",
+      "dtype: int64\n",
+      "             MedInc      HouseAge      AveRooms     AveBedrms    Population  \\\n",
+      "count  20640.000000  20640.000000  20640.000000  20640.000000  20640.000000   \n",
+      "mean       3.870671     28.639486      5.429000      1.096675   1425.476744   \n",
+      "std        1.899822     12.585558      2.474173      0.473911   1132.462122   \n",
+      "min        0.499900      1.000000      0.846154      0.333333      3.000000   \n",
+      "25%        2.563400     18.000000      4.440716      1.006079    787.000000   \n",
+      "50%        3.534800     29.000000      5.229129      1.048780   1166.000000   \n",
+      "75%        4.743250     37.000000      6.052381      1.099526   1725.000000   \n",
+      "max       15.000100     52.000000    141.909091     34.066667  35682.000000   \n",
+      "\n",
+      "           AveOccup      Latitude     Longitude  \n",
+      "count  20640.000000  20640.000000  20640.000000  \n",
+      "mean       3.070655     35.631861   -119.569704  \n",
+      "std       10.386050      2.135952      2.003532  \n",
+      "min        0.692308     32.540000   -124.350000  \n",
+      "25%        2.429741     33.930000   -121.800000  \n",
+      "50%        2.818116     34.260000   -118.490000  \n",
+      "75%        3.282261     37.710000   -118.010000  \n",
+      "max     1243.333333     41.950000   -114.310000  \n",
+      "count    20640.000000\n",
+      "mean         2.068558\n",
+      "std          1.153956\n",
+      "min          0.149990\n",
+      "25%          1.196000\n",
+      "50%          1.797000\n",
+      "75%          2.647250\n",
+      "max          5.000010\n",
+      "Name: med_house_value, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "print(\"First 5 rows of the feature dataset:\")\n",
+    "# First 5 rows of the feature dataset\n",
     "print(X.head())\n",
     "\n",
     "# Print the feature names\n",
     "print(\"\\nFeature names:\")\n",
-    "print(x.columns())\n",
+    "print(y.head())\n",
     "\n",
     "# Check for missing values\n",
     "print(\"\\nMissing values in the dataset:\")\n",
-    "print(X.isnull().sum())\n",
-    "\n",
+    "print(X.isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             MedInc      HouseAge      AveRooms     AveBedrms    Population  \\\n",
+      "count  20640.000000  20640.000000  20640.000000  20640.000000  20640.000000   \n",
+      "mean       3.870671     28.639486      5.429000      1.096675   1425.476744   \n",
+      "std        1.899822     12.585558      2.474173      0.473911   1132.462122   \n",
+      "min        0.499900      1.000000      0.846154      0.333333      3.000000   \n",
+      "25%        2.563400     18.000000      4.440716      1.006079    787.000000   \n",
+      "50%        3.534800     29.000000      5.229129      1.048780   1166.000000   \n",
+      "75%        4.743250     37.000000      6.052381      1.099526   1725.000000   \n",
+      "max       15.000100     52.000000    141.909091     34.066667  35682.000000   \n",
+      "\n",
+      "           AveOccup      Latitude     Longitude  \n",
+      "count  20640.000000  20640.000000  20640.000000  \n",
+      "mean       3.070655     35.631861   -119.569704  \n",
+      "std       10.386050      2.135952      2.003532  \n",
+      "min        0.692308     32.540000   -124.350000  \n",
+      "25%        2.429741     33.930000   -121.800000  \n",
+      "50%        2.818116     34.260000   -118.490000  \n",
+      "75%        3.282261     37.710000   -118.010000  \n",
+      "max     1243.333333     41.950000   -114.310000  \n",
+      "count    20640.000000\n",
+      "mean         2.068558\n",
+      "std          1.153956\n",
+      "min          0.149990\n",
+      "25%          1.196000\n",
+      "50%          1.797000\n",
+      "75%          2.647250\n",
+      "max          5.000010\n",
+      "Name: med_house_value, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
     "# Generate summary statistics\n",
-    "print(\"\\nSummary statistics of the dataset:\")\n",
-    "print(X.describe())"
+    "print(X.describe())\n",
+    "print(y.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -85,8 +173,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression"
+    "# Split the raw data (80% training, 20% testing)\n",
+    "X_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Initialize and train the linear regression model on unscaled data\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(X_train_raw, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = lin_reg.predict(X_test_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 2.17\n",
+      "Root Squared Error: 1.47\n",
+      "R² Score: -0.59\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, root_mean_squared_error, r2_score\n",
+    "\n",
+    "# Evaluate model performance\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse  = root_mean_squared_error(y_test, y_pred)\n",
+    "r2  = r2_score(y_test, y_pred)\n",
+    "\n",
+    "# print values as floats w/ 2 decimal places\n",
+    "print(f\"Mean Squared Error: {mse:.2f}\")\n",
+    "print(f\"Root Squared Error: {rmse:.2f}\")\n",
+    "print(f\"R² Score: {r2:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What does the R² score tell us about model performance?\n",
+    "\n",
+    "Which features seem to have the strongest impact on predictions based on the model’s coefficients?\n",
+    "\n",
+    "How well do the predicted values match the actual values?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
