adding the pivot table

--- a/Tidy Data Project/Olympians.ipynb
+++ b/Tidy Data Project/Olympians.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "[15 rows x 71 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "2656    Joo Hyun-Jung    gold  female  archery"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "<Axes: title={'center': 'Count of Medals by Type'}, xlabel='Medal Type'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "<Axes: title={'center': 'Count of Medals by Sex'}, xlabel='Sex'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -842,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Finally, horizontal bar chart comparing medal counts by sport"
+    "- Finally, horizontal bar chart comparing gold medal counts by sport"
    ]
   },
   {
@@ -856,7 +856,7 @@
        "<Axes: title={'center': 'Gold Medals by Sport'}, xlabel='Number of Medals', ylabel='Sport'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -874,15 +874,15 @@
    "source": [
     "# Create a DataFrame with Sports as rows and Medals as columns\n",
     "# - count the medal values in each sport \n",
-    "# - convertt the series of values into a dataframe \n",
+    "# - convert the series of values into a dataframe \n",
     "medals_by_sport = df_melted.groupby('Sport')['Medal'].value_counts().unstack()\n",
     "\n",
-    "# Create a horizontal bar chart showing total medals per sport\n",
+    "# Create a horizontal bar chart showing total gold medals per sport\n",
     "# - sort_values(): Sort in ascending value\n",
     "medals_by_sport['gold'].sort_values().plot(\n",
     "    kind='barh',                        # Horizontal bar chart\n",
     "    color=['gold', 'navy', 'green'],    # Colors (ND)\n",
-    "    figsize=(15, 10),                    # 15in wide and 10in tall\n",
+    "    figsize=(15, 10),                   # 15in wide and 10in tall\n",
     "    title='Gold Medals by Sport',       # Chart title\n",
     "    xlabel='Number of Medals',          # horizontal axis\n",
     "    ylabel='Sport'                      # vertical axis\n",
@@ -890,18 +890,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now lets create a pivot table to summarize individual medal counts by Sport and Sex!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medal                        bronze  gold  silver\n",
+      "Sport                Sex                         \n",
+      "archery              female       4     2       3\n",
+      "                     male         4     3       4\n",
+      "artistic gymnastics  female       7     7       6\n",
+      "                     male        12     7      10\n",
+      "association football female      18    18      18\n",
+      "...                             ...   ...     ...\n",
+      "volleyball           male        12    12      12\n",
+      "water polo           female      13    13      13\n",
+      "                     male        13    13      13\n",
+      "weightlifting        female       7     7       7\n",
+      "                     male         8     8       8\n",
+      "\n",
+      "[70 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pivot_medals = pd.pivot_table(df_melted, # Using the cleaned/tidy dataframe\n",
+    "                              values='medalist_name', # Setting values to be counted as the indivual athletes\n",
+    "                              index=['Sport', 'Sex'], # Rows as sport and sex\n",
+    "                              columns='Medal', # Columns as medal types (gold, silver, bronze)\n",
+    "                              aggfunc='count', # Counting occurences (data is qualitative and not quantitative)\n",
+    "                              fill_value=0 # Missing values filled with 0\n",
+    ")\n",
+    "\n",
+    "print(pivot_medals)"
+   ]
   }
  ],
  "metadata": {
