--- a/Notes/Week 9/IDS_Week_9_1_(3_18)_FINAL-1.ipynb
+++ b/Notes/Week 9/IDS_Week_9_1_(3_18)_FINAL-1.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,6 +61,8 @@
         }
       ],
       "source": [
+        "# predicitng weather something will happen or not\n",
+        "\n",
         "# Importing necessary libraries\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -719,7 +721,9 @@
         "plt.show()\n",
         "\n",
         "# Display classification report\n",
-        "print(classification_report(y_test, y_pred))"
+        "print(classification_report(y_test, y_pred))\n",
+        "\n",
+        "# BETTER AT PREDICTING ZEROS THAN 1's"
       ]
     },
     {
@@ -853,7 +857,9 @@
         "\n",
         "# Display probabilities for first 5 test observations\n",
         "print(\"Predicted Probabilities for first 5 passengers (Not_Survival=0 and Survival=1):\")\n",
-        "print(probabilities[:5])"
+        "print(probabilities[:5])\n",
+        "\n",
+        "# first person 83% not surviving "
       ]
     }
   ],
